[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/shotgun_frames.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Scripts/Gun.gd" type="Script" id=3]
[ext_resource path="res://sprites/ui_bar_lower.png" type="Texture" id=4]
[ext_resource path="res://sprites/health_bar.tres" type="SpriteFrames" id=5]
[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://sprites/pistol_ui.png" type="Texture" id=7]
[ext_resource path="res://sprites/crosshair.png" type="Texture" id=8]
[ext_resource path="res://prefabs/UI/Main Menu.tscn" type="PackedScene" id=9]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[node name="Player" type="KinematicBody" groups=[
"player",
]]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.884326, -0.415652 )

[node name="Gun" type="RayCast" parent="Camera"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, -0.176865, 0.0831304 )
enabled = true
cast_to = Vector3( 0, 0, -1 )
script = ExtResource( 3 )

[node name="weapon_audio" type="AudioStreamPlayer" parent="Camera/Gun"]

[node name="rocket_spawn" type="Position3D" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.834107 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Interface" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" type="AnimatedSprite" parent="CanvasLayer/Interface"]
position = Vector2( 136, 96.0612 )
scale = Vector2( 1.5, 1.5 )
frames = ExtResource( 2 )
animation = "shotgun"

[node name="UI_Bar" type="Sprite" parent="CanvasLayer/Interface"]
position = Vector2( 79.992, 132 )
texture = ExtResource( 4 )

[node name="HealthBar" type="AnimatedSprite" parent="CanvasLayer/Interface/UI_Bar"]
position = Vector2( -0.00570679, -0.0284729 )
frames = ExtResource( 5 )
frame = 7

[node name="AmmoCounter" type="Label" parent="CanvasLayer/Interface/UI_Bar"]
margin_left = 61.0
margin_top = -7.0
margin_right = 74.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.415686, 0.443137, 1 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponIndicator" type="Sprite" parent="CanvasLayer/Interface/UI_Bar"]
position = Vector2( 49.699, -1.90753 )
texture = ExtResource( 7 )

[node name="Crosshair" type="Sprite" parent="CanvasLayer/Interface"]
position = Vector2( 80, 72 )
texture = ExtResource( 8 )

[node name="Menu" parent="CanvasLayer" instance=ExtResource( 9 )]
